force-app/main/default/objects/Cvent_Integration__c/Cvent_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is used to store data related to cvent integration</description>
    <label>Cvent Integration</label>
</CustomObject>