force-app/main/default/objects/Cvent_Integration__c/fields/Cvent_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Cvent_AccountNumber__c</fullName>
    <label>Cvent AccountNumber</label>
    <length>8</length>
    <type>Text</type>
</CustomField>