force-app/main/default/objects/Cvent_Integration__c/fields/Cvent_Password__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Password__c</fullName>
    <label>Cvent Password</label>
    <length>11</length>
    <type>Text</type>
</CustomField>