force-app/main/default/objects/Cvent_Integration__c/fields/Cvent_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Time_Zone__c</fullName>
    <label>Cvent Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>