force-app/main/default/objects/Cvent_Integration__c/fields/Cvent_Username__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Username__c</fullName>
    <label>Cvent Username</label>
    <length>11</length>
    <type>Text</type>
</CustomField>