force-app/main/default/objects/Cvent_Integration__c/fields/Event_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Event_Last_Synced__c</fullName>
    <label>Event Last Synced</label>
    <type>DateTime</type>
</CustomField>