force-app/main/default/objects/Cvent_Integration__c/fields/Event_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Event_Statuses__c</fullName>
    <label>Event Statuses</label>
    <type>TextArea</type>
</CustomField>