force-app/main/default/objects/Cvent_Integration__c/fields/Events_Retrieval_Months__c.field-meta.xml
<CustomField>
    <fullName>Events_Retrieval_Months__c</fullName>
    <label>Events Retrieval Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>