force-app/main/default/objects/Cvent_Integration__c/fields/Registration_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Registration_Last_Synced__c</fullName>
    <label>Registration Last Synced</label>
    <type>DateTime</type>
</CustomField>