force-app/main/default/objects/Cvent_Integration__c/fields/Retrieve_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_Batch_Size__c</fullName>
    <label>Retrieve Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>